# homework_4

./: Autotest.cpp  Autotest.hpp  Autotest1.txt  Autotest2.txt  Autotest3.txt  CMakeLists.txt  README.md  func.cpp  header.hpp  homework_4.cpp  my_file.txt
